crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@102.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT routine_name, sequence_name FROM information_schema.routine_sequence_usage\n  WHERE routine_schema = 'temp_func_test'\n  ORDER BY 1, 2;"
---
SelectStmt@0..140
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    ColumnRef@7..19
      Ident@7..19 "routine_name"
  Ascii44@19..20 ","
  Whitespace@20..21 " "
  ResTarget@21..34
    ColumnRef@21..34
      Ident@21..34 "sequence_name"
  Whitespace@34..35 " "
  From@35..39 "FROM"
  Whitespace@39..40 " "
  RangeVar@40..81
    Ident@40..58 "information_schema"
    Ascii46@58..59 "."
    Ident@59..81 "routine_sequence_usage"
  Newline@81..82 "\n"
  Whitespace@82..84 "  "
  Where@84..89 "WHERE"
  Whitespace@89..90 " "
  AExpr@90..123
    ColumnRef@90..104
      Ident@90..104 "routine_schema"
    Whitespace@104..105 " "
    Ascii61@105..106 "="
    Whitespace@106..107 " "
    AConst@107..123
      Sconst@107..123 "'temp_func_test'"
  Newline@123..124 "\n"
  Whitespace@124..126 "  "
  SortBy@126..136
    Order@126..131 "ORDER"
    Whitespace@131..132 " "
    By@132..134 "BY"
    Whitespace@134..135 " "
    AConst@135..136
      Iconst@135..136 "1"
  Ascii44@136..137 ","
  Whitespace@137..138 " "
  SortBy@138..139
    AConst@138..139
      Iconst@138..139 "2"
  Ascii59@139..140 ";"

