crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@103.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT routine_name, table_name, column_name FROM information_schema.routine_column_usage\n  WHERE routine_schema = 'temp_func_test'\n  ORDER BY 1, 2;"
---
SelectStmt@0..148
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    ColumnRef@7..19
      Ident@7..19 "routine_name"
  Ascii44@19..20 ","
  Whitespace@20..21 " "
  ResTarget@21..31
    ColumnRef@21..31
      Ident@21..31 "table_name"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  ResTarget@33..44
    ColumnRef@33..44
      Ident@33..44 "column_name"
  Whitespace@44..45 " "
  From@45..49 "FROM"
  Whitespace@49..50 " "
  RangeVar@50..89
    Ident@50..68 "information_schema"
    Ascii46@68..69 "."
    Ident@69..89 "routine_column_usage"
  Newline@89..90 "\n"
  Whitespace@90..92 "  "
  Where@92..97 "WHERE"
  Whitespace@97..98 " "
  AExpr@98..131
    ColumnRef@98..112
      Ident@98..112 "routine_schema"
    Whitespace@112..113 " "
    Ascii61@113..114 "="
    Whitespace@114..115 " "
    AConst@115..131
      Sconst@115..131 "'temp_func_test'"
  Newline@131..132 "\n"
  Whitespace@132..134 "  "
  SortBy@134..144
    Order@134..139 "ORDER"
    Whitespace@139..140 " "
    By@140..142 "BY"
    Whitespace@142..143 " "
    AConst@143..144
      Iconst@143..144 "1"
  Ascii44@144..145 ","
  Whitespace@145..146 " "
  SortBy@146..147
    AConst@146..147
      Iconst@146..147 "2"
  Ascii59@147..148 ";"

