crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@104.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT routine_name, table_name FROM information_schema.routine_table_usage\n  WHERE routine_schema = 'temp_func_test'\n  ORDER BY 1, 2;"
---
SelectStmt@0..134
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..19
    ColumnRef@7..19
      Ident@7..19 "routine_name"
  Ascii44@19..20 ","
  Whitespace@20..21 " "
  ResTarget@21..31
    ColumnRef@21..31
      Ident@21..31 "table_name"
  Whitespace@31..32 " "
  From@32..36 "FROM"
  Whitespace@36..37 " "
  RangeVar@37..75
    Ident@37..55 "information_schema"
    Ascii46@55..56 "."
    Ident@56..75 "routine_table_usage"
  Newline@75..76 "\n"
  Whitespace@76..78 "  "
  Where@78..83 "WHERE"
  Whitespace@83..84 " "
  AExpr@84..117
    ColumnRef@84..98
      Ident@84..98 "routine_schema"
    Whitespace@98..99 " "
    Ascii61@99..100 "="
    Whitespace@100..101 " "
    AConst@101..117
      Sconst@101..117 "'temp_func_test'"
  Newline@117..118 "\n"
  Whitespace@118..120 "  "
  SortBy@120..130
    Order@120..125 "ORDER"
    Whitespace@125..126 " "
    By@126..128 "BY"
    Whitespace@128..129 " "
    AConst@129..130
      Iconst@129..130 "1"
  Ascii44@130..131 ","
  Whitespace@131..132 " "
  SortBy@132..133
    AConst@132..133
      Iconst@132..133 "2"
  Ascii59@133..134 ";"

