crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@113.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE OR REPLACE FUNCTION functest1(a int) RETURNS int LANGUAGE SQL WINDOW AS 'SELECT $1';"
---
CreateFunctionStmt@0..91
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Or@7..9 "OR"
  Whitespace@9..10 " "
  Replace@10..17 "REPLACE"
  Whitespace@17..18 " "
  Function@18..26 "FUNCTION"
  Whitespace@26..27 " "
  Ident@27..36 "functest1"
  Ascii40@36..37 "("
  FunctionParameter@37..42
    Ident@37..38 "a"
    Whitespace@38..39 " "
    TypeName@39..42
      IntP@39..42 "int"
  Ascii41@42..43 ")"
  Whitespace@43..44 " "
  Returns@44..51 "RETURNS"
  Whitespace@51..52 " "
  TypeName@52..55
    IntP@52..55 "int"
  Whitespace@55..56 " "
  DefElem@56..68
    Language@56..64 "LANGUAGE"
    Whitespace@64..65 " "
    SqlP@65..68 "SQL"
  Whitespace@68..69 " "
  DefElem@69..75
    Window@69..75 "WINDOW"
  Whitespace@75..76 " "
  DefElem@76..90
    As@76..78 "AS"
    Whitespace@78..79 " "
    List@79..90
      Sconst@79..90 "'SELECT $1'"
  Ascii59@90..91 ";"

