crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@114.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE OR REPLACE PROCEDURE functest1(a int) LANGUAGE SQL AS 'SELECT $1';"
---
CreateFunctionStmt@0..73
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Or@7..9 "OR"
  Whitespace@9..10 " "
  Replace@10..17 "REPLACE"
  Whitespace@17..18 " "
  Procedure@18..27 "PROCEDURE"
  Whitespace@27..28 " "
  Ident@28..37 "functest1"
  Ascii40@37..38 "("
  FunctionParameter@38..43
    Ident@38..39 "a"
    Whitespace@39..40 " "
    TypeName@40..43
      IntP@40..43 "int"
  Ascii41@43..44 ")"
  Whitespace@44..45 " "
  DefElem@45..57
    Language@45..53 "LANGUAGE"
    Whitespace@53..54 " "
    SqlP@54..57 "SQL"
  Whitespace@57..58 " "
  DefElem@58..72
    As@58..60 "AS"
    Whitespace@60..61 " "
    List@61..72
      Sconst@61..72 "'SELECT $1'"
  Ascii59@72..73 ";"

