crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@118.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION functest_sri1() RETURNS SETOF int\nLANGUAGE SQL\nSTABLE\nAS '\n    SELECT * FROM functest3;\n';"
---
CreateFunctionStmt@0..106
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..29 "functest_sri1"
  Ascii40@29..30 "("
  Ascii41@30..31 ")"
  Whitespace@31..32 " "
  Returns@32..39 "RETURNS"
  Whitespace@39..40 " "
  Setof@40..45 "SETOF"
  Whitespace@45..46 " "
  TypeName@46..49
    IntP@46..49 "int"
  Newline@49..50 "\n"
  DefElem@50..62
    Language@50..58 "LANGUAGE"
    Whitespace@58..59 " "
    SqlP@59..62 "SQL"
  Newline@62..63 "\n"
  DefElem@63..69
    Stable@63..69 "STABLE"
  Newline@69..70 "\n"
  DefElem@70..105
    As@70..72 "AS"
    Whitespace@72..73 " "
    List@73..105
      Sconst@73..105 "'\n    SELECT * FROM f ..."
  Ascii59@105..106 ";"

