crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@119.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM functest_sri1();
---
SelectStmt@0..30
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..27
    List@14..27
      FuncCall@14..27
        Ident@14..27 "functest_sri1"
  Ascii40@27..28 "("
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

