crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@127.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE FUNCTION voidtest2(a int, b int) RETURNS VOID LANGUAGE SQL AS\n$$ SELECT voidtest1(a + b) $$;"
---
CreateFunctionStmt@0..99
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Function@7..15 "FUNCTION"
  Whitespace@15..16 " "
  Ident@16..25 "voidtest2"
  Ascii40@25..26 "("
  FunctionParameter@26..31
    Ident@26..27 "a"
    Whitespace@27..28 " "
    TypeName@28..31
      IntP@28..31 "int"
  Ascii44@31..32 ","
  Whitespace@32..33 " "
  FunctionParameter@33..38
    Ident@33..34 "b"
    Whitespace@34..35 " "
    TypeName@35..38
      IntP@35..38 "int"
  Ascii41@38..39 ")"
  Whitespace@39..40 " "
  Returns@40..47 "RETURNS"
  Whitespace@47..48 " "
  TypeName@48..52
    Ident@48..52 "VOID"
  Whitespace@52..53 " "
  DefElem@53..65
    Language@53..61 "LANGUAGE"
    Whitespace@61..62 " "
    SqlP@62..65 "SQL"
  Whitespace@65..66 " "
  DefElem@66..98
    As@66..68 "AS"
    Newline@68..69 "\n"
    List@69..98
      Sconst@69..98 "$$ SELECT voidtest1(a ..."
  Ascii59@98..99 ";"

